--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="Full Stack Developer passionate about creating innovative web solutions and scalable applications." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/png" href="/public/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
